--- a/lists.html
+++ b/lists.html
@@ -39,6 +39,15 @@
             pointer-events: none;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148493797-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-148493797-1');
+    </script>
 </head>
 
 <body>
